# routing-module

./: .env.example  LICENSE  README.md  pyproject.toml
src/routing_module/: __init__.py  cli.py  config.py  pipeline.py
src/routing_module/llm/: __init__.py  parser.py  prompts.py
src/routing_module/maps/: __init__.py  client.py  geocode.py  places.py  routes.py
src/routing_module/models/: __init__.py  request.py  result.py
src/routing_module/planners/: __init__.py  fuel.py  geo.py  overnight.py
tests/: test_fuel.py  test_geo.py  test_models.py  test_parser.py  test_pipeline.py
