[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routing-module"
version = "0.1.0"
description = "Natural language trip planner using Gemini and OpenRouteService"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "google-genai>=1.0",
    "httpx>=0.27",
    "polyline>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[project.scripts]
routing-module = "routing_module.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
